# todos

./: .env  Cargo.toml  README.md
migrations/: 20260128060850_create_todos_table.sql  20260202024834_add_users_table.sql
src/: db.rs  error.rs  handler.rs  lib.rs  main.rs  middleware.rs  routes.rs  types.rs
static/css/: todos.css
static/js/: todos.js
templates/: login.html  register.html  todos.html
tests/: quick_dev.rs
