[package]
name = "todos"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
salvo.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "time"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
httpc-test = "0.1.10"
salvo = { workspace = true, features = ["test"] }
serde_json = "1.0.149"
